--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
     "react-dom": "^18.2.0",
     "react-material-ui-carousel": "^3.4.2",
     "react-router-dom": "^6.4.3",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "^0.9.5",
     "sass": "^1.56.1",
     "styled-components": "^5.3.6",
-    "sweetalert2": "^11.6.10",
+    "sweetalert2": "^11.4.8",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -48,7 +48,9 @@
   },
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "main": ".eslintrc.js",
-  "devDependencies": {},
+  "devDependencies": {
+    "webpack": "^5.75.0"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/iamivanvila/proyecto-react.git"
